--- a/css/address_book_form.css
+++ b/css/address_book_form.css
@@ -129,3 +129,13 @@ body {
     border-radius: 4px;
     resize: vertical;
   }
+  select {
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font: normal normal normal 16px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    background-color: transparent;
+  }
