--- a/css/address_book_form.css
+++ b/css/address_book_form.css
@@ -139,3 +139,23 @@ body {
     color: #42515f;
     background-color: transparent;
   }
+  .location-row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 55px;
+  }
+  
+  .location-row div {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .location-row div:nth-of-type(2) {
+    margin: 0px 25px;
+  }
+  
+  .location-row input {
+    box-sizing: border-box;
+    font-size: 16px;
+  }
