--- a/css/address_book_form.css
+++ b/css/address_book_form.css
@@ -159,3 +159,43 @@ body {
     box-sizing: border-box;
     font-size: 16px;
   }
+
+  .buttonParent{
+    display:flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding-left: 68%;
+}
+.button{
+    font-size: 15px;
+    font-family: Roboto;
+    letter-spacing: 0px;
+    opacity:1;
+    background: transparent;
+    border: none;
+    font-weight: 400;
+    min-width: 100px;
+    padding:7px 7px;
+    border: 1px solid #707070;
+    cursor: pointer;
+    border-radius: 4px;
+    transition-duration: 0.4s;
+}
+  .submitButton {
+    margin-right: 30px;
+    background-color: lightgreen;
+    color: black;
+  }
+  .resetButton{
+    margin-right: 50px;
+    background-color: lightskyblue;
+  }
+  
+  error-output {
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color: red;
+    white-space: nowrap;
+  }
