ADDED: media query for screen width more then 960px

--- a/css/address_book_form.css
+++ b/css/address_book_form.css
@@ -199,3 +199,14 @@ body {
     color: red;
     white-space: nowrap;
   }
+  
+  @media only screen and (max-width: 960px) {
+    .cancelButton {
+      margin-left: 0px;
+    }
+  
+    .form {
+      width: 85%;
+      padding: 44px 20px;
+    }
+  }
