--- a/css/address_book_form.css
+++ b/css/address_book_form.css
@@ -199,7 +199,7 @@ body {
     color: red;
     white-space: nowrap;
   }
-  
+
   @media only screen and (max-width: 960px) {
     .cancelButton {
       margin-left: 0px;
@@ -208,5 +208,41 @@ body {
     .form {
       width: 85%;
       padding: 44px 20px;
+    }
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .form {
+      margin-top: 10px;
+    }
+  
+    .row {
+      flex-direction: column;
+    }
+  
+    .uploadButton {
+      justify-content: flex-start;
+    }
+  
+    .profile-radio-button {
+      flex-flow: wrap;
+    }
+  
+    .submit-reset {
+      width: 100%;
+      display: flex;
+      flex-grow: 1;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+  
+    .submitButton {
+      margin: 0;
+    }
+  
+    .buttonParent {
+      flex-direction: column-reverse;
+      align-items: flex-start;
     }
   }
