--- a/css/address_book_form.css
+++ b/css/address_book_form.css
@@ -143,12 +143,15 @@ body {
     display: flex;
     flex-direction: row;
     margin-bottom: 55px;
+    resize: vertical;
+    flex-wrap: wrap;
   }
   
   .location-row div {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    resize: vertical;
   }
   
   .location-row div:nth-of-type(2) {
@@ -165,12 +168,14 @@ body {
     margin-bottom: 10px;
     justify-content: space-between;
     margin-top: 20px;
-    padding-left: 68%;
+    padding-left: 65%;
 }
 .button{
+    height: 125%;
     font-size: 15px;
     font-family: Roboto;
     letter-spacing: 0px;
+    width: 35%;
     opacity:1;
     background: transparent;
     border: none;
@@ -181,6 +186,11 @@ body {
     cursor: pointer;
     border-radius: 4px;
     transition-duration: 0.4s;
+}
+button:disabled {
+ cursor:none;
+  pointer-events: none;
+  opacity: 0.5;
 }
   .submitButton {
     margin-right: 30px;
@@ -199,7 +209,7 @@ body {
     color: red;
     white-space: nowrap;
   }
-
+  
   @media only screen and (max-width: 960px) {
     .cancelButton {
       margin-left: 0px;
@@ -209,13 +219,18 @@ body {
       width: 85%;
       padding: 44px 20px;
     }
+    .buttonParent{
+      padding-left: 50%;
+    }
   }
   
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 673px) {
     .form {
       margin-top: 10px;
     }
-  
+    .location-row div:nth-of-type(2) {
+      margin: 0px 0px;
+    }
     .row {
       flex-direction: column;
     }
@@ -223,6 +238,7 @@ body {
     .uploadButton {
       justify-content: flex-start;
     }
+    
   
     .profile-radio-button {
       flex-flow: wrap;
@@ -245,4 +261,5 @@ body {
       flex-direction: column-reverse;
       align-items: flex-start;
     }
+   
   }
