--- a/css/address_book_home.css
+++ b/css/address_book_home.css
@@ -51,3 +51,51 @@ html body {
   * {
     box-sizing: border-box;
   }
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh-80px);
+    background-color: #f7f7f7;
+    padding: 20px 0 5px;
+    box-sizing: border-box;
+  }
+  
+  .header-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    padding-left: 80px;
+    padding-bottom: 25px;
+  }
+  
+  .address-detail-text {
+    font: normal normal bold 24px/25px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+  }
+  
+  .address-count {
+    background-color: #008cff;
+    color: #ffffff;
+    border-radius: 42%;
+    font-size: 16px;
+    width: 26px;
+    text-align: center;
+    display: inline-block;
+  }
+  
+  .add-button {
+    font: normal normal normal 22px/29px Roboto;
+    letter-spacing: 0px;
+    color: #ffffff;
+    opacity: 1;
+    border: none;
+    border-radius: 5px;
+    outline: none;  
+    cursor: pointer;
+    text-decoration: none;
+  }
