--- a/css/address_book_home.css
+++ b/css/address_book_home.css
@@ -4,8 +4,8 @@ html body {
   }
   
   .header {
-    padding: 32px 80px;
     background-color: #ffffff;
+    padding-top: 30px;
   }
   
   .header-content {
@@ -13,7 +13,6 @@ html body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: 0px solid green;
   }
   
   .logo-content {
@@ -67,7 +66,6 @@ html body {
     align-items: center;
     width: 80%;
     margin: 0 auto;
-    padding-left: 80px;
     padding-bottom: 25px;
   }
   
@@ -99,7 +97,7 @@ html body {
     cursor: pointer;
     text-decoration: none;
   }
-  .table-main {
+   .table-main {
     width: 80%;
     margin: 0 auto;
     overflow: auto;
@@ -109,7 +107,7 @@ html body {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0 15px;
-    min-width: 800px;
+    min-width: 0px
   }
   
   td,
@@ -125,6 +123,7 @@ html body {
     color: #658292;
     text-transform: capitalize;
     opacity: 1;
+    padding-left: 50px;
   }
   
   tr:not(:first-child) {
@@ -149,13 +148,14 @@ html body {
     letter-spacing: 0px;
     color: #3d3d3d;
     background-color: white;
-    padding: 15px 15px;
+    padding: 15px 0px 15px 50px;
     opacity: 1;
   }
   
   td:first-child {
     display: flex;
     align-items: center;
+    
   }
   
   td img:first-child {
@@ -184,4 +184,12 @@ html body {
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
+  }
+  @media only screen and (max-width: 1135px){
+    td{
+      padding: 10px 2px;
+    }
+    th{
+      padding-left: 0;
+    }
   }
